@@ -1,5 +1,9 @@
 [Changes 1.2c01]
 
+* Don't set the mode on new channels until synched - this speeds up joining
+  lots of channels at connect time if one of them is new, and reduces the
+  chance of being flooded off the server. (caf)
+
 * Correctly handle channel sync across multi-server. (caf)
 
 * Fixes and improvements for channel logging. (caf)
